--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,11 @@
             "email": "pauline.desmares@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+
+    "autoload": {
+        "psr-4" : {
+            "jmd\\" : "src"
+        }
+    }
 }
