--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "twig/twig": "^2.4",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "phpmailer/phpmailer": "^6.0"
     },
     "authors": [
         {
